refactor: use activej net worker eventloop to handle request.